client/my-sites/checkout/checkout-thank-you/style.scss
/* ... */
.jetpack-checkout-siteless-thank-you {
	.jetpack-checkout-siteless-thank-you__card {
		display: flex;
		flex-direction: column;
		padding: 0;
		border-radius: 4px; /* stylelint-disable-line */
		overflow: hidden;
		box-shadow: 0 0 40px 0 #00000014;

		width: 100%;
		max-width: none;

		@include break-medium {
			flex-direction: row;
			width: auto;
			max-width: 1200px;
		}

		.jetpack-logo {
			margin-bottom: 25px;
		}

		h1 {
			line-height: 1;
			@include break-mobile {
				font-size: $font-headline-medium;
			}
			+ p {
				font-size: 18px; /* stylelint-disable-line */
				line-height: 1.5rem;
				@include break-mobile {
					font-size: $font-title-medium;
					line-height: 2rem;
				}
			}
		}
		h2 {
			font-size: $font-title-medium;
			font-weight: 700;
			line-height: 1.75rem;
			padding-bottom: 16px;
		}

		a.jetpack-checkout-siteless-thank-you__link {
			text-decoration: underline;
			color: var( --color-studio-black );
			&:hover {
				text-decoration: none;
			}
		}

		> div {
			box-sizing: border-box;
			padding: 26px;
			@include break-mobile {
				padding: 76px;
			}
		}
		.jetpack-checkout-siteless-thank-you__card-main {
			max-width: 744px;
		}

		.jetpack-checkout-siteless-thank-you__step {
			display: flex;
			align-items: flex-start;
			padding-bottom: 40px;

			&:last-of-type {
				padding-bottom: 0;
			}

			.jetpack-checkout-siteless-thank-you__step-number {
				color: white;
				background-color: var( --studio-jetpack-green-40 );
				text-align: center;
				border-radius: 50%; /* stylelint-disable-line */
				font-size: $font-title-small;
				font-weight: 600;
				width: rem( 32px );
				height: rem( 32px );
			}
			.jetpack-checkout-siteless-thank-you__step-content {
				flex: 1;
				padding: 0 10px 0 16px;
				p {
					@include break-mobile {
						font-size: 18px; /* stylelint-disable-line */
						line-height: 1.75rem;
					}
					margin: 0;
				}
			}
		}

		.jetpack-checkout-siteless-thank-you__form-group {
			display: flex;
			flex-direction: column;
			@include break-mobile {
				display: flex;
				flex-direction: row;
				justify-content: space-between;
			}

			.jetpack-checkout-siteless-thank-you__form-input {
				margin-bottom: 16px;
				@include break-mobile {
					flex: 1;
					margin-right: 16px;
					margin-bottom: 0;
				}
			}
			.button.jetpack-checkout-siteless-thank-you__form-submit {
				margin: 0;
				&.is-primary {
					&.is-busy {
						background-image: linear-gradient(
							-45deg,
							var( --studio-jetpack-green-40 ) 28%,
							var( --studio-jetpack-green-50 ) 28%,
							var( --studio-jetpack-green-50 ) 72%,
							var( --studio-jetpack-green-40 ) 72%
						);
					}
					background-color: var( --studio-jetpack-green-50 );
					border-color: var( --studio-jetpack-green-50 );
					&:hover {
						background-color: var( --studio-jetpack-green-60 );
						border-color: var( --studio-jetpack-green-60 );
					}
					&[disabled] {
						color: var( --color-neutral-20 );
						background-color: var( --color-surface );
						border-color: var( --color-neutral-5 );
					}
				}
				@include break-mobile {
					align-self: flex-end;
					justify-self: flex-end;
				}
			}
		}

		.jetpack-checkout-siteless-thank-you__card-footer {
			display: flex;
			align-items: flex-end;

			background-color: #f9f9f6;
			> div {
				max-width: 456px;
			}
		}

		.jetpack-checkout-siteless-thank-you__main-message {
			font-size: 2.25rem;
			font-weight: 700;
			margin-bottom: 24px;

			@include break-mobile {
				font-size: 3rem;
			}
		}

		.jetpack-checkout-siteless-thank-you__sub-message {
			font-size: 1.5rem;
			margin-bottom: 64px;
		}

		.jetpack-checkout-siteless-thank-you__product-info-loading {
			@include placeholder( --color-neutral-20 );
		}

		.jetpack-checkout-siteless-thank-you__form-label {
			margin-top: 24px;
		}
	}
}

.jetpack-checkout-thank-you {
	.jetpack-checkout-thank-you__card,
	.jetpack-checkout-thank-you__card-loading {
		box-shadow: 0 0 40px 0 #00000014;

		width: 100%;
		max-width: none;
		padding: 16px;

		@include break-mobile {
			width: auto;
			max-width: 650px;
			padding: 96px;
		}

		.jetpack-checkout-thank-you__main-message {
			font-size: $font-headline-small;
			font-weight: 700;
			margin-bottom: 24px;

			@include break-mobile {
				font-size: $font-headline-medium;
			}
		}

		.jetpack-checkout-thank-you__sub-message-loading,
		.jetpack-checkout-thank-you__sub-message {
			font-size: $font-title-medium;
			font-weight: 500; /* stylelint-disable-line */
			margin-bottom: 64px;
		}

		.jetpack-checkout-thank-you__email-message-loading,
		.jetpack-checkout-thank-you__email-message {
			margin-top: -32px;
			margin-bottom: 64px;
		}

		.jetpack-checkout-thank-you__button,
		.jetpack-checkout-thank-you__button:visited {
			border-radius: calc( 2px * 2 );
			@include jetpack-primary-button;
		}
	}

	.jetpack-checkout-thank-you__sub-message-loading,
	.jetpack-checkout-thank-you__email-message-loading {
		@include placeholder( --color-neutral-20 );
	}
}

.checkout-thank-you__domains .thank-you__body {
	& > div {
		width: 690px;
	}

	div {
		justify-content: space-between;
	}

	.domain-mapping-thank-you__button {
		width: 100%;
	}
}

